cmake_minimum_required(VERSION 3.22)
project(nat-lb)

set(CMAKE_CXX_STANDARD 17)

set(WERROR_FLAGS
        -W
        -Wall
        -Wstrict-prototypes
        -Wmissing-prototypes
        -Wmissing-declarations
        -Wold-style-definition
        -Wpointer-arith
        -Wcast-align
        -Wnested-externs
        -Wcast-qual
        -Wformat-nonliteral
        -Wformat-security
        -Wundef
        -Wwrite-strings
        -Wdeprecated
        -Winvalid-pch
        -Wextra
        -Wdeprecated
        -Wformat
        -Wformat-nonliteral
        -Wformat-security
        -Wmissing-declarations
        -Wmissing-prototypes
        -Wnested-externs
        -Wold-style-definition
        -Wpointer-arith
        -Wsign-compare
        -Wstrict-prototypes
        -Wundef
        -Wwrite-strings
        -Wno-address-of-packed-member
        -Wno-packed-not-aligned
        -Wno-missing-field-initializers
        -Wno-zero-length-bounds
        -Wno-format-truncation
        -Wno-abi
        -Wno-psabi
)

set(CFLAGS
        -m64
        -pthread
        -march=native
        -include /usr/local/include/rte_config.h
        -O0
        ${WERROR_FLAGS}
        -g
)

set(DPDKLIBS
        -Wl,--whole-archive
        #        dpdk
        rte_acl
        rte_bbdev
        rte_bitratestats
        rte_bpf
        rte_bus_dpaa
        rte_bus_fslmc
        rte_bus_ifpga
        rte_bus_pci
        rte_bus_vdev
        rte_bus_vmbus
        rte_cfgfile
        rte_cmdline
        rte_common_cpt
        rte_common_dpaax
        rte_common_octeontx
        rte_compressdev
        rte_cryptodev
        rte_distributor
        rte_eal
        rte_efd
        rte_ethdev
        rte_eventdev
        rte_fib
        rte_gro
        rte_gso
        rte_hash
        rte_ip_frag
        rte_ipsec
        rte_jobstats
        rte_kvargs
        rte_latencystats
        rte_lpm
        rte_mbuf
        rte_member
        rte_mempool
        rte_mempool_bucket
        rte_mempool_dpaa2
        rte_mempool_dpaa
        rte_mempool_octeontx
        rte_mempool_ring
        rte_mempool_stack
        rte_meter
        rte_metrics
        rte_net
        rte_pci
        rte_pdump
        rte_pipeline
        rte_port
        rte_power
        rte_rawdev
        rte_reorder
        rte_ring
        rte_sched
        rte_security
        rte_table
        rte_timer
        rte_vhost
        rte_rcu
        -Wl,--no-whole-archive)

add_definitions(
        -DRTE_MACHINE_CPUFLAG_SSE
        -DRTE_MACHINE_CPUFLAG_SSE2
        -DRTE_MACHINE_CPUFLAG_SSE3
        -DRTE_MACHINE_CPUFLAG_SSSE3
        -DRTE_MACHINE_CPUFLAG_SSE4_1
        -DRTE_MACHINE_CPUFLAG_SSE4_2
        -DRTE_MACHINE_CPUFLAG_AES
        -DRTE_MACHINE_CPUFLAG_PCLMULQDQ
        -DRTE_MACHINE_CPUFLAG_AVX
        -DRTE_MACHINE_CPUFLAG_RDRAND
        -DRTE_MACHINE_CPUFLAG_FSGSBASE
        -DRTE_MACHINE_CPUFLAG_F16C
        -DRTE_MACHINE_CPUFLAG_AVX2
        -D_FILE_OFFSET_BITS=64
        -DALLOW_EXPERIMENTAL_API
        -D_GNU_SOURCE)

add_compile_options(${CFLAGS})

include_directories(/usr/local/include)

link_directories(/usr/local/lib64)
link_directories(/usr/local/lib)

link_libraries(
        ${DPDKLIBS}
        pthread
        rt
        dl
        m
        pcap
        protobuf-c
        toml
)

add_executable(nat-lb main.c
        src/acl/acl.c
        src/acl/acl.h
        src/inet/inet.c
        src/inet/inet.c
        src/common/list.h
        src/common/log.h
        src/common/pipeline.h
        src/common/pipeline.c
        src/common/skb.h
        src/common/lcore.h
        src/common/lcore.c
        src/common/util.c
        src/common/util.h
        src/ct/ct.c
        src/ct/ct.h
        src/inet/flow.h
        src/ct/proto_tcp.c
        src/ct/proto_icmp.c
        src/ct/proto_udp.c
        src/dev/dev.h
        src/dev/dev.c
        src/inet/icmp.h
        src/inet/icmp.c
        src/inet/ipv4.c
        src/inet/ipv4.h
        src/lb/lb.h
        src/lb/lb.c
        src/lb/nat.h
        src/lb/nat.c
        src/lb/sa_pool.h
        src/lb/sa_pool.c
        src/lb/svc.h
        src/lb/svc.c
        src/neigh/arp.h
        src/neigh/arp.c
        src/neigh/neigh.h
        src/neigh/neigh.c
        src/route/route.h
        src/route/route.c
        src/inet/gre.h
        src/inet/gre.c
        src/ctrl/ctrl.c
        src/ctrl/ctrl.h
        src/ctrl/msg.pb-c.h
        src/ctrl/msg.pb-c.c
        src/sync/sync.h
        src/sync/sync.c
        src/inet/udp.h
        src/inet/udp.c
        src/ha/ha.h
        src/ha/ha.c
        src/inet/tcp.h
        src/inet/tcp.c
        src/common/ip_group.h
        src/common/ip_group.c
        src/common/conf.h
        src/common/conf.c
        src/common/const.h
        src/lb/schedule.h
        src/lb/schedule.c
        src/lb/wrr_scheduler.c
)

